# NaturalLanguagePasswordGenerator

./: .gitignore  README.md  nlp.db  nlp.py  nlp.sql  nlp_gen.py  pyproject.toml
.github/workflows/: python-publish.yml
src/nlp/: __init__.py  __main__.py  nlp.py
src/nlpg/: __init__.py  __main__.py  nlpg.db  nlpg.py  nlpg.sql
